src/objects/Project_Issue__c.object
<CustomObject>
    <description>This object will contain issues description related to products</description>
    <fields>
        <fullName>BL__c</fullName>
        <description>this is BL of project to which issue is raised</description>
        <label>BL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is description of issue of project</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Number__c</fullName>
        <description>This is a unique number alloted to issue of project</description>
        <label>Issue Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <description>MAG of the project detail</description>
        <label>MAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Assigns the name of the project belonging to the current user</description>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the project corresponding to which issue is raised</description>
        <label>Project</label>
        <referenceTo>Project_Detail__c</referenceTo>
        <relationshipLabel>Project Issues</relationshipLabel>
        <relationshipName>Project_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This picklist field will contains status of the issue</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Solved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This is title of the issue of the project</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Company__c</fullName>
        <description>This is company of user who has raised or submitted the issue</description>
        <label>User Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Issue</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>